# turBOTax

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  QWEN.md  README.md  SPEC.md  docker-compose.yml  opencode.json  pyproject.toml
config/: qwen_settings.json
data/: f1040_full_text.md  f1040_parsed.json  f1040_parsed.md  irs_publications_list.md  irs_qa_eval.json  llm_eval_prompts.json  llm_eval_results.json  qa_eval_results.json
data/irs_publications/: pub_1040_2025.md  pub_1212_2025.md  pub_15_2026.md  pub_17_2025.md  pub_225_2025.md  pub_334_2025.md  pub_3_2025.md  pub_4681_2025.md  pub_501_2025.md  pub_502_2025.md  pub_503_2025.md  pub_504_2025.md  pub_505_2025.md  pub_509_2026.md  pub_514_2025.md  pub_515_2025.md  pub_517_2025.md  pub_519_2025.md  pub_525_2025.md  pub_526_2025.md  pub_527_2025.md  pub_530_2025.md  pub_537_2025.md  pub_544_2025.md  pub_547_2025.md  pub_54_2025.md  pub_551_2025.md  pub_554_2025.md  pub_557_2025.md  pub_559_2025.md  pub_560_2025.md  pub_570_2025.md  pub_571_2026.md  pub_575_2025.md  pub_590_2025.md  pub_596_2025.md  pub_907_2025.md  pub_908_2025.md  pub_915_2025.md  pub_925_2025.md  (+6 more)
docs/: AGENT_PROMPT.md  VAULT_STRUCTURE.md
frontend/: .gitignore  index.html  package-lock.json  package.json  run.js  start.sh
frontend/src/: App.css  App.tsx  DynamicGraph.tsx  GraphView.tsx  index.css
obsidian_db/turbo_tax/.obsidian/: workspace.json
obsidian_db/turbo_tax/00 - Dashboard/: Map of Contents.md  Quick Reference.md  Welcome.md
obsidian_db/turbo_tax/00 - Templates/: Publication.md  Tax Form.md  Topic Template.md  Topic.md
obsidian_db/turbo_tax/000 - Meta/: Changelog.md
obsidian_db/turbo_tax/01 - Tax Forms/: _index.md
obsidian_db/turbo_tax/02 - Publications/: Pub 1040 - Tax and Earned Income Credit Tables 2025.md  Pub 1212 - Guide to Original Issue Discount (OID) Instruments.md  Pub 15 - Employer's Tax Guide.md  (+44 more)
scripts/: batch_parse_publications.py  compose.sh  container.sh  debug_qwen.sh  distill-all.sh  distill-entrypoint.sh  distill.sh  evaluate_qa.py  extract-assets-entrypoint.sh  extract_assets.py  llm_judge_eval.py  run_qwen_obsidian.py  run_qwen_obsidian.sh  run_tax_agent.py  run_tax_agent.sh  save_parsed_output.py  test_parse_irs.py
src/turbo_tax/: __init__.py
tests/: test_parser.py
(+599 files in other folders)
