[project]
name = "turbo-tax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "docling[onnxruntime]>=2.75.0",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins (shadowing builtins)
    "ARG",    # flake8-unused-arguments
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "E",      # pycodestyle errors
    "EM",     # flake8-errmsg (exception message formatting)
    "EXE",    # flake8-executable
    "F",      # pyflakes
    "FLY",    # flynt (f-string conversions)
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INP",    # flake8-no-pep420
    "ISC",    # flake8-implicit-str-concat
    "N",      # pep8-naming
    "PERF",   # perflint (performance)
    "PIE",    # flake8-pie
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "SIM",    # flake8-simplify
    "T10",    # flake8-debugger
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]
ignore = [
    "COM812", # conflicts with formatter
    "ISC001", # conflicts with formatter
    "PLR0913", # too many arguments (can be noisy)
    "TRY003", # long exception messages (can be noisy)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",    # unused arguments common in tests
    "S101",   # assert is fine in tests
    "PLR2004", # magic values fine in tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
